2025-05-30 26
  * automatic replace deprecated configuration values by new value
  * support libsmb2 for Windows port
  * increased test code coverage
  * fixed some memory leaks
  * fixed handling optional command line options (isSet-operator)
  * fixed error handling when deleting .nobackup
  * upgraded SQLite to 3.49.1
  * BACControl: upgrade to Java 1.7
  * BARControl: add total progress to test dialog
  * BARControl: add general commands to server settings dialog
  * BARControl: fixed bug #29: null pointer exception when adding
    filter rule
  * upgrade build+test docker base to Ubuntu 24.04
  * replaced support for CentOS by AlmaLinux

2025-01-31 25b
  * fixed write config values permission, owner
  * log next schedule
  * use ISO date/time as default format
  * fixed parse+format file permission string (bug #25)
  * fixed abort job with destination CD/DVD/BD with internal
    toolchain
  * BARControl: fixed abort restore: close dialog
  * BARControl: fixed restore dialog values

2024-11-01 25a
  * fixed key constrain failed on database import (bug #16)
  * fixed estimated rest tmie for database import (bug #17)
  * fixed delete storages on (sftp-) server (bug #21)
  * BARControl: fixed exception if server return an invalid
    size value (bug #15)
  * BARControl: fixed wrong stored pane sizes (bug #14)

2024-10-20 25
  * removed directory aggregate data from index: hardly used,
    save space and time
  * integrated libmount to mount/umount. Used when --mount-command,
    --unmount-command are not set (empty).
  * BARControl: added test function
  * fixed execute pre/post commands: run also for slave jobs
  * fixed locking entities when adding storages to index
  * fixed handling verbose level: do not reset in service script

2024-07-13 24a
  * fixed long blocking of database at clean
  * fixed upgrade database, fixed memory leak
  * test/compare/extract: reduced thread overhead if only a
    single thread is used